@startuml GradesClass
hide circle

entity Group{
    id: number
    --
    name: string
}
entity GroupSubject{
    id: number
    --
    groupId:Number<FK>
    sugjectId:Number<FK>
}
entity Subject{
    id: number
    --
    name: string
    typeId: Number<FK>
}
entity Type{
    id: number
    --
    name: string
}

entity Student{
    id: number
    --
    name: string
    groupId:Number<FK>
}
entity Grade{
    id: number
    --
    subjectId: Number<FK>
    studentId: Number<FK>
    gradeValue: number
    date: date
}

Group "1" <-- "*" GroupSubject
Subject "1" <-- "*" GroupSubject

Type "1" <-- "*" Subject
Grade "1" <-- "*" Subject
Grade "1" <-- "*" Student
Student "1" <-- "*" Group
@enduml

